Fix : need to work on mobile menu section

--- a/style.css
+++ b/style.css
@@ -522,11 +522,11 @@ body {
     33% { transform: translateY(-15px) rotate(1deg); }
     66% { transform: translateY(-25px) rotate(-1deg); }
 }
-}
+
 
 /* Section Header */
 .section-header {
-    text-align: center;
+   
     margin-bottom: 4rem;
 }
 
@@ -894,6 +894,16 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
     margin-bottom: 2rem;
+}
+.project-button{
+    padding: 07px 10px;
+    margin-top: 20px;
+    border-radius: 05px;
+    border-style: none;
+    background-color: #74c0ff;
+    color: black;
+    cursor: pointer;
+
 }
 
 .footer-section h3 {
